# Minecraft-Clone

./: CMakeLists.txt  Minecraft-Clone.cpp  Minecraft-Clone.h
Assets/shaders/: block.frag  block.vert
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/include/Core/: Camera.h  GLADLoader.h  Game.h  Input.h  Window.h
Engine/Core/src/: Camera.cpp  GLADLoader.cpp  Game.cpp  Input.cpp  Window.cpp
Engine/Render/: CMakeLists.txt
Engine/Render/include/Render/: Mesh.h  Renderer.h  Shader.h  Texture.h
Engine/Render/src/: Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
Engine/Utils/: CMakeLists.txt
Engine/Utils/include/Utils/: ResourceManager.h
Engine/Utils/src/: ResourceManager.cpp
Engine/include/Core/: Game.h  Window.h
Engine/src/Core/: CMakeLists.txt  Game.cpp
Game/: CMakeLists.txt  main.cpp
